--- a/04-astro-islands-showcase/package.json
+++ b/04-astro-islands-showcase/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/vue": "^4.0.8",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "astro": "^2.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "vue": "^3.4.5"
   },
   "devDependencies": {
     "prettier": "^2.8.4",
