--- a/04-astro-islands-showcase/package.json
+++ b/04-astro-islands-showcase/package.json
@@ -13,9 +13,12 @@
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^3.0.1",
     "@astrojs/vue": "^4.0.8",
+    "@nanostores/react": "^0.7.1",
+    "@nanostores/vue": "^0.10.0",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "astro": "^2.0.17",
+    "nanostores": "^0.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.7",
